--- a/package.json
+++ b/package.json
@@ -38,15 +38,13 @@
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.2.7",
     "@types/vimeo__player": "^2.18.3",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "@wroud/vite-plugin-ssg": "^5.3.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "lint-staged": "^5.0.0",
-    "vite": "^6.3.3",
-    "vite-plugin-svgr": "^3.0.0"
+    "vite": "^6.3.3"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix",
